--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "homepage": "https://jogacolhue.github.io/weather-app",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "convert-units": "^2.3.4",
+    "gh-pages": "^1.2.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -15,6 +17,8 @@
     "redux": "^4.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
