--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^1.4.3",
     "convert-units": "^2.3.4",
     "gh-pages": "^1.2.0",
+    "lodash.topairs": "^4.3.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -14,7 +15,9 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "react-weathericons": "^1.0.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
